# programming-languages-research

./: .gitignore  GITHUB_SETUP.md  README.md  debug.html  index.html  index_old.html  minimal.html  setup_github.sh  simple_test.html  test.html
css/: style.css
js/: main.js
projects/: projects.json
projects/C++研究/: README.md  cpp17_features.cpp  cpp20_features.cpp  error_handling_patterns.cpp  modern_concurrency.cpp  smart_pointers.cpp  template_metaprogramming.cpp
projects/C++研究/leetcode/: 001_two_sum.cpp  003_longest_substring_without_repeating_characters.cpp  020_valid_parentheses.cpp  021_merge_two_sorted_lists.cpp  053_maximum_subarray.cpp  070_climbing_stairs.cpp  104_maximum_depth_of_binary_tree.cpp  125_valid_palindrome.cpp  206_reverse_linked_list.cpp  704_binary_search.cpp
projects/C语言研究/: README.md  memory_pool.c  modern_c_features.c  performance_optimization.c
projects/C语言研究/DistFS/: CMakeLists.txt  PROGRESS.md  PROJECT_PLAN.md  README.md  REQUIREMENTS.md  TESTING.md  test_compile  test_simple
projects/C语言研究/DistFS/config/: distfs.conf.example
projects/C语言研究/DistFS/include/: distfs.h  network.h
projects/C语言研究/DistFS/scripts/: build.sh
projects/C语言研究/DistFS/src/client/: cache.c  client.c  file_ops.c  main.c  main_enhanced.c
projects/C语言研究/DistFS/src/common/: config.c  hash.c  log.c  memory.c  utils.c
projects/C语言研究/DistFS/src/metadata/: main.c  metadata_server.c
projects/C语言研究/DistFS/src/network/: client.c  connection_pool.c  network.c  server.c
projects/C语言研究/DistFS/src/storage/: block_manager.c  disk_io.c  main.c  replication.c  storage_node.c
projects/C语言研究/DistFS/tests/: integration_test.c  test_basic.c  test_compile.c  test_config.c  test_integration.c  test_simple.c
projects/Python研究/: README.md  async_programming.py  decorators.py
projects/Shell研究/: README.md  automation.sh  performance.sh
projects/Shell研究/DevOpsHub/: .gitignore  API_DESIGN.md  ARCHITECTURE.md  DEVELOPMENT.md  Dockerfile  Makefile  PROJECT_PLAN.md  README.md  REQUIREMENTS.md  docker-compose.yml  quick-start.sh
projects/Shell研究/DevOpsHub/config/: default.conf
projects/Shell研究/DevOpsHub/config/environments/: development.conf  production.conf
projects/Shell研究/DevOpsHub/lib/core/: bootstrap.sh  config.sh  logging.sh
projects/Shell研究/DevOpsHub/lib/utils/: common.sh
projects/Shell研究/DevOpsHub/scripts/: setup-dev.sh
projects/Shell研究/DevOpsHub/tests/: test_helper.bash
projects/Shell研究/DevOpsHub/tests/unit/: config.bats
projects/安全研究/: README.md  secure_programming.c  secure_python.py
projects/工具链研究/: README.md  compiler_optimization.c  dev_tools.py
projects/性能研究/: README.md  benchmark.c  performance_test.py
projects/跨语言研究/: README.md  algorithm_research.cpp  cross_language_interface.c  python_c_binding.py
